# improved-local-assistant

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_HISTORY.md  GITHUB_DEPLOYMENT_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  VARS.md  __init__.py  app.py  config.yaml  conftest.py  constraints.txt  deploy.py  index.html  install.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  rebuild_knowledge_graphs.py  requirements-lock.txt  requirements.txt  run_app.py  setup.py  setup_dev.py  sitemap.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  docs.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat  srt  srt-deduplicate  srt-fixed-timeshift  srt-linear-timeshift  srt-lines-matching  srt-mux  srt-normalise  srt-play  srt-process  striprtf
API/: index.html
CHANGELOG/: index.html
DEVELOPMENT_HISTORY/: index.html
EDGE_CHROME_AUDIO_FIXES/: index.html
EDGE_OPTIMIZATION/: index.html
GRAPH_DOWNLOAD_SYSTEM/: index.html
MEMORY_FALLBACK_SYSTEM/: index.html
PREBUILT_GRAPHS_GUIDE/: index.html
PROPERTY_GRAPH_MIGRATION/: index.html
STORAGE_AND_PERSISTENCE_TESTING/: index.html
VOICE_CHAT_IMPLEMENTATION/: index.html
VOICE_CONTROL_FIXES/: index.html
VOICE_PHASE1_IMPLEMENTATION/: index.html
VOICE_PHASE2_IMPLEMENTATION/: index.html
adr/001-project-structure/: index.html
app/: __init__.py  main.py  schemas.py
app/api/: __init__.py  chat.py  graph.py  models.py  system.py
app/core/: __init__.py  config.py  dependencies.py  logging.py  websockets.py
app/schemas/: __init__.py  requests.py  websocket.py
app/services/: __init__.py  init.py
app/static/: index.html  script.js  style.css  test_plan.md
app/ws/: __init__.py  chat.py  monitor.py  voice_stt.py  voice_tts.py
benchmarks/: README.md  benchmark_hermes3_3b_1754326703.json  graphrag_benchmark_1754328782.json  graphrag_benchmark_1754329188.json  graphrag_benchmark_1754329767.json
cli/: README.md  graphrag_repl.py  graphrag_repl_minimal.py  graphrag_repl_simple.py  memory_status.py  test_api.py  test_conversation.py  test_dual_model.py  test_knowledge_graph.py  test_memory_fallback.py  test_models.py  test_orchestration.py  test_system.py  test_web_interface.py  toggle_edge_optimization.py  toggle_quiet_monitoring.py  validate_milestone_1.py  validate_milestone_2.py  validate_milestone_3.py  validate_milestone_4.py  validate_milestone_5.py  validate_milestone_6.py  validate_milestone_6_wrapper.py
config/: Makefile  README.md  mkdocs.yml
configs/: base.yaml  dev.yaml
data/: entity_link.db  graph_registry.json
data/graphs/: .gitkeep  README.md
data/prebuilt_graphs/: .gitkeep
data/sessions/: sessions.json
data/test_docs/: sample.txt  sas_survival.txt
docs/: API.md  CHANGELOG.md  CITATION.cff  DEVELOPMENT_HISTORY.md  EDGE_CHROME_AUDIO_FIXES.md  EDGE_OPTIMIZATION.md  GRAPH_DOWNLOAD_SYSTEM.md  MEMORY_FALLBACK_SYSTEM.md  PREBUILT_GRAPHS_GUIDE.md  PROPERTY_GRAPH_MIGRATION.md  STORAGE_AND_PERSISTENCE_TESTING.md  VOICE_CHAT_IMPLEMENTATION.md  VOICE_CONTROL_FIXES.md  VOICE_PHASE1_IMPLEMENTATION.md  VOICE_PHASE2_IMPLEMENTATION.md  index.md  installation.md  quickstart.md
docs/adr/: 001-project-structure.md
examples/: advanced_graphrag.py  basic_usage.py
installation/: index.html
quickstart/: index.html
scripts/: benchmark_graphrag_pipeline.py  benchmark_models.py  build_graph_registry.py  ci_local.bat  ci_local.sh  cleanup_llamaindex.py  compare_benchmarks.py  download_graphs.py  download_voice_models.py  final_cleanup.py  fix_common_issues.py  fix_graph_encoding.py  fix_imports.py  fix_json_here.py  fix_startup_issues.py  fix_utf8_encoding.py  format_code.py  import_smoke_test.py  inspect_graph_indices.py  inspect_storage_structure.py  install_win32_deps.py  memory_optimizer.py  migrate_to_property_graphs.py  post_install.py  query_fire_entries.py  quick_fix.py  quick_graphrag_benchmark.py  quick_test.py  rebuild_survivalist_graph.py  remove_problematic_graphs.py  retarget_docs_for_2004c68.py  run_app.py  run_benchmarks.py  run_end_to_end_tests.py  setup.py  setup_utf8_windows.py  smoke_test_graphrag.py  summarise_survivalist_graph.py  system_health_check.py  test_advanced_graphrag.py  (+26 more)
search/: search_index.json
services/: __init__.py  circuit_breaker.py  config_validator.py  connection_pool_manager.py  constants.py  conversation_extensions.py  conversation_manager.py  conversation_summarizer.py  dynamic_model_manager.py  embedding_singleton.py  error_handler.py  extraction_pipeline.py  graceful_degradation.py  graph_manager_original.py  graph_router.py  hybrid_retriever.py  kg_optimizer.py  llm_orchestrator.py  model_manager.py  model_mgr.py  orchestrated_model_manager.py  piper_tts_service.py  resource_manager.py  system_monitor.py  utf8_import_helper.py  utf8_runtime_patch.py  voice_manager.py  vosk_stt_service.py  webrtc_vad_service.py  working_set_cache.py
services/graph_manager/: __init__.py  construction.py  init_config.py  maintenance.py  persistence.py  persistence_simple.py  query.py  stats.py  visualization.py
src/improved_local_assistant/: __init__.py  run_app.py
storage/: working_set_cache.json
tests/: conftest.py  mock_ollama.py  test_basic.py  test_citations.py  test_config.yaml  test_dynamic_kg_upgrade.py  test_extraction.py  test_graphrag_ollama.py  test_graphrag_repl.py  test_integration.py  test_milestone_1.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_milestone_6_fixed.py  test_orchestration.py  test_performance_fixes.py  test_smoke.py  test_voice_integration.py  test_voice_services.py  test_voice_websockets.py  test_websocket_chat.py  test_websocket_fixes.py
tests/fixtures/: fixture_1.jsonl  fixture_2.jsonl  fixture_3.jsonl  fixture_guide.md
tools/: deploy.py
ui-test/: README.md  run_prototype.py
venv312/: pyvenv.cfg
(+144 files in other folders)
