[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "improved-local-assistant"
version = "1.0.0"
description = "Production-ready local AI assistant with GraphRAG and voice interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Team", email = "team@example.com"}
]
maintainers = [
    {name = "AI Team", email = "team@example.com"}
]
keywords = ["ai", "assistant", "graphrag", "knowledge-graph", "voice", "local", "privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",


    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    # Core web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # AI/ML core
    "ollama>=0.5.1",
    "llama-index==0.13.2",
    "llama-index-embeddings-ollama==0.8.1",
    "llama-index-embeddings-huggingface==0.6.0",
    "llama-index-llms-ollama==0.7.0",
    "llama-index-readers-file>=0.5.0",
    "sentence-transformers>=2.5.0",
    
    # Knowledge graph
    "networkx>=3.4.0",
    "pyvis>=0.3.2",
    
    # Text processing
    "tiktoken>=0.7.0",
    "rapidfuzz>=3.0.0",
    
    # Data processing
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    
    # System monitoring
    "psutil>=5.9.6",
    "asyncio-throttle>=1.0.2",
    "nest-asyncio>=1.5.6",
    
    # CLI tools
    "prompt-toolkit>=3.0.0",
    
    # Voice processing
    "vosk>=0.3.45",
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    
    # Platform-specific
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx[http2]>=0.27.0",
    
    # Code quality
    "ruff>=0.5.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.4.0",
    
    # Security
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "tomli>=1.2.0; python_version<'3.11'",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.scripts]
ila = "improved_local_assistant.run_app:main"
ila-cli = "improved_local_assistant.cli.graphrag_repl:main"

[project.urls]
Homepage = "https://github.com/hugokos/improved-local-assistant"
Documentation = "https://hugokos.github.io/improved-local-assistant"
Repository = "https://github.com/hugokos/improved-local-assistant"
Issues = "https://github.com/hugokos/improved-local-assistant/issues"
Changelog = "https://github.com/hugokos/improved-local-assistant/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from None
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.isort]
known-first-party = ["improved_local_assistant"]
force-single-line = true

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "llama_index.*",
    "sentence_transformers.*",
    "networkx.*",
    "pyvis.*",
    "neo4j.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests (no external dependencies)",
    "smoke: marks tests as smoke tests (basic functionality verification)",
    "voice: marks tests that require audio hardware",
    "gpu: marks tests that require GPU acceleration",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]